syntax = "proto3";

option csharp_namespace = "Discount.gRPC";

package discount;

service DiscountService {
  rpc GetDiscountByItemId (ItemDiscountRequestModel) returns (DiscountReply);
  rpc GetDiscountsByItemIds (ItemDiscountsRequestModel) returns (DiscountListReply);

}

message ItemDiscountRequestModel{
  int32 itemId = 1;
}

message DiscountReply {
  int32 discountId = 1;
  int32 itemId = 2;
  double percentage = 3;
  double amount = 4;
}

message ItemDiscountsRequestModel{
  repeated int32 itemIds = 1;
}
message DiscountListReply {
  repeated DiscountReply discounts = 1;
}